@ Fixed thread_quit() semaphore conflict that could cause freezes
@ Fixed Gfx_VLine() overwriting IY
@ Fixed vertical C_GRID controls
@ Fixed Menu_Context() return values
@ Fixed bad forward references to memmove()
@ Fixed Dir_Read() failing on some file length sequences
@ Fixed Mouse_X() returning Y value
@ Fixed digit order in atof()
@ Fixed Timer_Add() returning wrong ID
@ Simplified FRAME_XOR property
@ Moved atof() from libm to stdlib
@ Changed Sys_Version() to _sysversion global (now used by crt0)
@ Win_Open() PID now set correctly for other banks/threads
@ Changed ip to char[4] for thread-safety in libnet
@ Moved location of 16-color icon so EXEs compress correctly
@ Various structs tweaked to better support SymbOS 4.0 features

v1.1
+ Added libgfx
+ Added gfx2sgx
+ Added gfxdemo.c sample
+ Added sound daemon support
+ Added snddemo.c sample
+ Added md2hlp.py and SymbOS .HLP documentation
+ Added sortmap tool for reading memory maps
+ Added compression system calls
+ Added C_GRID and C_TREE controls
+ Added Shell_CharWatch() system call
+ Added Sys_Version() system call
+ Added Win_Width() and Win_Height() utility functions
@ libz80 is now in the primary codebase
@ Redesigned float library around faster z80float/z88dk code
@ Fixed float casting
@ Fixed passing floats as variadic arguments
+ Added printf("%f") support
- Removed unnecessary float->float casts
@ Fixed register variables
@ Mem_ResizeX() is now the primary Mem_Resize()
@ Fixed typo in makecalc_native.bat
@ Fixed missing Win_ContentX/Y calls
@ fgetc(stdin)/getchar() now treat \n correctly
@ Fixed escaped hex codes being outputted backwards
@ Fixed bug that kept some network functions from working
@ Fixed bug with native cpp keeping track of seek
@ Replaced rand(), memmove() with faster versions
@ Reduced ld memory usage by removing unused segments
+ Now properly detects SymShell close and exits cleanly
+ Various documentation tweaks and additions

v1.0
+ Initial release